app_v9/kad.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kad
  labels:
    app: kad
---
apiVersion: v1
kind: Service
metadata:
  name: kad
  namespace: kad
spec:
  type: NodePort
  selector:
    app: kad
  ports:
  - protocol: TCP
    targetPort: 5000
    port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: kad
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kad
  namespace: kad
  # finalizers:
  #- 6shore.net/kad-manual
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: kad
  template:
    metadata:
      labels:
        app: kad
    spec:
      # initContainers:
      # - name: init-file
      #   image: docker.io/debian
      #   command: ["bash", "-c", "date | tee /data/init-$(date --iso-8601=seconds)"]
      #   volumeMounts:
      #   - name: data-storage
      #     mountPath: /data/
      containers:
      - name: app
        image: docker.io/tomkukral/kad
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
        #command: ["/bin/kad", "--color", "$(COLOR)"]
        volumeMounts:
        - name: config
          mountPath: /etc/kad/
        # - name: data-storage
          # mountPath: /data/
      volumes:
      # - name: data-storage
      #   emptyDir:
        #persistentVolumeClaim:
        #  claimName: kad-data
      - name: config
        configMap:
          name: kad
          items:
          - key: config.yml
            path: config.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: kad
spec:
  selector:
    matchLabels:
      app: redis
  serviceName: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: docker.io/redis
        ports:
        - containerPort: 6379
