app_v9/ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kad
  namespace: kad
spec:
  entryPoints:
  - http
  - https
  routes:
  - match: HostRegexp("kad.{domain:.+}")
    kind: Rule
    services:
    - name: kad
      port: 80
